<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- See https://github.com/xtext/maven-xtext-example
         and https://www.eclipse.org/Xtext/documentation/350_continuous_integration.html
     -->
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.lflang</groupId>
    <artifactId>lf</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Lingua Franca</name>

    <properties>
        <!-- Version Properties -->
        <!-- Sync with build.gradle -->
        <commonsCliVersion>1.4</commonsCliVersion>
        <!-- Note that this version is tied to our version of Gradle -->
        <kotlinVersion>1.6.10</kotlinVersion>
        <lsp4jVersion>0.12.0</lsp4jVersion>
        <mwe2LaunchVersion>2.12.1</mwe2LaunchVersion>
        <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtextVersion. -->
        <xtextVersion>2.26.0</xtextVersion>
        <tychoVersion>2.3.0</tychoVersion>
        <runtimeVersion>3.23.0</runtimeVersion>

        <!-- Maven only properties -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <execMavenPluginVersion>3.0.0</execMavenPluginVersion>

        <!-- Non-version properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
    </properties>

    <profiles>
        <profile>
            <id>product</id>

            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <modules>
                <module>org.lflang</module>
                <module>org.lflang.ide</module>
                <module>org.lflang.ui</module>
                <module>org.lflang.diagram</module>
                <!-- Tests -->
                <module>org.lflang.tests</module>
                <module>org.lflang.ui.tests</module>
                <!-- Eclipse Product -->
                <module>org.lflang.sdk</module>
                <module>org.lflang.updatesite</module>
                <module>org.lflang.product</module>
                <module>org.lflang.rca</module>
                <module>org.lflang.targetplatform</module>
            </modules>
        </profile>
        <profile>
            <id>lds</id>

            <modules>
                <module>org.lflang</module>
                <module>org.lflang.ide</module>
                <module>org.lflang.diagram</module>

                <module>org.lflang.lds</module>
                <module>org.lflang.targetplatform</module>
            </modules>
        </profile>
    </profiles>
    <pluginRepositories>
        <pluginRepository>
            <id>tycho-staged</id>
            <url>https://oss.sonatype.org/content/repositories/orgeclipsetycho-1056</url>
        </pluginRepository>
    </pluginRepositories>

    <build>

        <pluginManagement>

            <plugins>

                <!-- This plugin helps finding the latest plugin or dependency versions for your modules. Open up the terminal and execute this command to find the plugin versions you have to update:
                mvn versions:display-plugin-updates -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>


                <!-- xtend-maven-plugin is in pluginManagement instead of in plugins
                     so that it doesn't run before the exec-maven-plugin's *.mwe2 gen; this way
                     we can list it after. -->
                <plugin>
                    <groupId>org.eclipse.xtend</groupId>
                    <artifactId>xtend-maven-plugin</artifactId>
                    <version>${xtextVersion}</version>
                    <executions>
                        <execution>
                            <id>generate-xtend</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>compile</goal>
                                <goal>xtend-install-debug-info</goal>
                                <goal>testCompile</goal>
                                <goal>xtend-test-install-debug-info</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <outputDirectory>xtend-gen</outputDirectory>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlinVersion}</version>
                    <executions>
                        <execution>
                            <id>kotlin-compile</id>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <srcDirs>
                                    <sourceDir>${project.basedir}/src</sourceDir>
                                    <sourceDir>${project.basedir}/src-gen</sourceDir>
                                    <sourceDir>${project.basedir}/xtend-gen</sourceDir>
                                </srcDirs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tychoVersion}</version>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <phase>compile</phase>
                        </execution>
                    </executions>
                </plugin>

                <!-- <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin> -->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.5</version>
                    <executions>
                        <execution>
                            <id>gen-clean</id>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                            <configuration>
                                <filesets>
                                    <fileset>
                                        <directory>${basedir}/xtend-gen</directory>
                                    </fileset>
                                </filesets>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>

            </plugins>

        </pluginManagement>

        <plugins>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tychoVersion}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tychoVersion}</version>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <argLine>-ea</argLine>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <!-- See https://www.eclipse.org/tycho/sitedocs/target-platform-configuration/target-platform-configuration-mojo.html#pomDependencies   -->
                    <!-- This puts the kotlin osgi bundle into the target platform. -->
                    <pomDependencies>consider</pomDependencies>
                    <target>
                        <artifact>
                            <groupId>org.lflang</groupId>
                            <artifactId>org.lflang.targetplatform</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>     
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>

        </plugins>

    </build>

</project>
